--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "packages/**"
   ],
   "scripts": {
-    "start": "npm run -w common -w main build && npm -w main start"
+    "start": "npm run -w shared -w server build && npm -w server start"
   }
 }
